# Hachi

./: .gitmodules  CMakeLists.txt
_script/: build.sh
assets/: dummy.txt
include/: chip8.hh  file_browser.hh
script/: build.bat  init.bat
src/: chip8.cc  main.cc
wasm/: index.html
